@@ -1,0 +1,166 @@
+<?xml version="1.0"?>
+<!DOCTYPE modification SYSTEM "http://www.simplemachines.org/xml/modification">
+
+<modification xmlns="http://www.simplemachines.org/xml/modification" xmlns:smf="http://www.simplemachines.org/">
+	<id>el:prettyurls-reverter</id>
+	<version>0.9</version>
+
+	<file name="$boarddir/index.php">
+		<operation>
+			<search position="replace"><![CDATA[
+// Clean the request variables, add slashes, etc.
+cleanRequest();
+$context = array();
+]]></search>
+			<add><![CDATA[
+// Unserialize the array of pretty board URLs
+$context = array('pretty' => array());
+// Clean the request variables, add slashes, etc.
+cleanRequest();
+]]></add>
+		</operation>
+	</file>
+
+	<file name="$boarddir/SSI.php">
+		<operation>
+			<search position="after"><![CDATA[
+// Clean the request variables.
+]]></search>
+			<add><![CDATA[
+// Unserialize the array of pretty board URLs
+$context = array('pretty' => array());
+]]></add>
+		</operation>
+	</file>
+
+	<file name="$sourcedir/Display.php">
+		<operation>
+			<search position="after"><![CDATA[
+	// Load the proper template and/or sub template.
+]]></search>
+			<add><![CDATA[
+	//	301 redirects
+	if (!isset($context['pretty']['oldschoolquery']))
+	{
+		$filterData = unserialize($modSettings['pretty_filters']);
+		if ($filterData['topics']['enabled'])
+		{
+			$url = 'topic=' . $topic . '.' . (isset($_REQUEST['start']) ? $_REQUEST['start'] : '0') . (isset($_REQUEST['prev_next']) ? ';prev_next=' . $_REQUEST['prev_next'] : '') . (isset($_REQUEST['topicseen']) ? ';topicseen' : '') . (isset($_REQUEST['all']) ? ';all' : '') . (isset($_REQUEST['viewResults']) ? ';viewResults' : '');
+			redirectexit($url, false, true);
+		}
+	}
+]]></add>
+		</operation>
+	</file>
+
+	<file name="$sourcedir/MessageIndex.php">
+		<operation>
+			<search position="after"><![CDATA[
+	if (WIRELESS)
+]]></search>
+			<add><![CDATA[
+	//	301 redirects
+	if (!isset($context['pretty']['oldschoolquery']))
+	{
+		$filterData = unserialize($modSettings['pretty_filters']);
+		if ($filterData['boards']['enabled'])
+		{
+			$url = 'board=' . $board . '.' . (isset($_REQUEST['start']) ? $_REQUEST['start'] : '0') . (isset($_REQUEST['sort']) ? ';sort=' . $_REQUEST['sort'] : '');
+			redirectexit($url, false, true);
+		}
+	}
+]]></add>
+		</operation>
+	</file>
+
+	<file name="$sourcedir/QueryString.php">
+		<operation>
+			<search position="replace"><![CDATA[
+function cleanRequest()
+{
+	global $board, $topic, $boardurl, $scripturl, $modSettings, $smcFunc;
+]]></search>
+			<add><![CDATA[
+function cleanRequest()
+{
+	global $board, $topic, $boardurl, $scripturl, $modSettings, $smcFunc, $context;
+]]></add>
+		</operation>
+
+		<operation>
+			<search position="replace"><![CDATA[
+		// Now make absolutely sure it's a number.
+		$board = (int) $_REQUEST['board'];
+]]></search>
+			<add><![CDATA[
+		// Now make absolutely sure it's a number.
+		// Check for pretty board URLs too, we'll want to redirect these
+		if (is_numeric($_REQUEST['board']))
+		{
+			$board = (int) $_REQUEST['board'];
+			if (!isset($_GET['pretty']))
+				$context['pretty']['oldschoolquery'] = true;
+		} else {
+			$_REQUEST['board'] = str_replace(array('&#039;', '\\'), array("\x12", ''), $_REQUEST['board']);
+			$pretty_board_lookup = unserialize($modSettings['pretty_board_lookup']);
+			$board = (int) isset($pretty_board_lookup[$_REQUEST['board']]) ? $pretty_board_lookup[$_REQUEST['board']] : 0;
+		}
+]]></add>
+		</operation>
+
+		<operation>
+			<search position="replace"><![CDATA[
+		$topic = (int) $_REQUEST['topic'];
+]]></search>
+			<add><![CDATA[
+		// Check for pretty topic URLs, we'll want to redirect these
+		if (is_numeric($_REQUEST['topic']))
+		{
+			$topic = (int) $_REQUEST['topic'];
+			if (!isset($_GET['pretty']))
+				$context['pretty']['oldschoolquery'] = true;
+		} else {
+			$_REQUEST['topic'] = str_replace(array('&#039;', '\\'), array("\x12", ''), $_REQUEST['topic']);
+			//	Are we feeling lucky?
+			$query = $smcFunc['db_query']('', "
+				SELECT id_topic
+				FROM {db_prefix}pretty_topic_urls
+				WHERE pretty_url = {string:topic}",
+			array('topic' => $_REQUEST['topic']));
+			//	No? No topic?!
+			if ($smcFunc['db_num_rows']($query) == 0)
+				$topic = 0;
+			else
+			{
+				$row = $smcFunc['db_fetch_row']($query);
+				$topic = (int) $row[0];
+			}
+			$smcFunc['db_free_result']($query);
+		}
+]]></add>
+		</operation>
+	</file>
+
+	<file name="$sourcedir/Subs.php">
+		<operation>
+			<search position="replace"><![CDATA[
+function redirectexit($setLocation = '', $refresh = false)
+]]></search>
+			<add><![CDATA[
+function redirectexit($setLocation = '', $refresh = false, $permanent = false)
+]]></add>
+		</operation>
+
+		<operation>
+			<search position="before"><![CDATA[
+	if (isset($modSettings['integrate_redirect']) && function_exists($modSettings['integrate_redirect']))
+		$modSettings['integrate_redirect']($setLocation, $refresh);
+]]></search>
+			<add><![CDATA[
+	if ($permanent)
+		header('HTTP/1.1 301 Moved Permanently');
+]]></add>
+		</operation>
+	</file>
+
+</modification>
