@@ -1,0 +1,11 @@
+[b]Pretty URLs Reverter[/b]
+
+This package will allow you to revert to SMF's normal URLs without breaking any pretty URLs that may have been indexed or used elsewhere. These pretty URLs will be redirected to the normal SMF URLs.
+
+[b]Note:[/b] to install this package Pretty URLs must have been uninstalled already, but the database settings and .htaccess file must not have been removed.
+
+[hr]
+
+Version 0.9
+Copyright (c) 2006-2008, Dannii Willis
+[url=http://code.google.com/p/prettyurls]Pretty URLs project home[/url]
